# FocusRoom

./: .gitignore  CMakeLists.txt  README.md
backend/: .env  package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: CalendarController.js  RoomController.js  SpotifyController.js  StudyGPTController.js  leftSidebarController.js  notesController.js  themesController.js
backend/models/: RoomModel.js  leftSidebarModel.js  notesModel.js  themesModel.js  userModel.js
backend/routes/: CalendarRoutes.js  RoomRoutes.js  SpotifyRoutes.js  StudyGPTRoutes.js  leftSidebarRoutes.js  notesRoutes.js  themesRoutes.js  userRoutes.js
backend/socket/: index.js
frontend/: next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  temp.tsx  tsconfig.json
frontend/app/: globals.css  page.tsx
frontend/app/createroom/: page.tsx
frontend/app/dashboard/: dashboard.css  layout.tsx  page.tsx
frontend/app/room/[roomId]/: ClientOnlyRoomWrapper.tsx  RoomClient.tsx  VideoCall.tsx  VideoDisplay.tsx  (+2 more)
frontend/app/signin/: page.tsx
frontend/components/: ChatPanel.tsx  ClientDashboard.tsx  ControlBar.tsx  CreateRoom.tsx  FreeNotes.tsx  LeftSidebar.tsx  Notes.tsx  PomoTimer.tsx  PomodoroTimer.tsx  Spotify.tsx  SpotifyWrapper.tsx  StatusComponents.tsx  StudyGPT.tsx  ThemeSelector.tsx  Timer.tsx  TodaySchedule.tsx  Todo.tsx
frontend/hooks/: useChat.ts  useMediaStream.ts  useSocket.ts  useWebRTC.ts
frontend/lib/: auth.ts  iconMap.tsx  mongodb.ts
frontend/src/app/: globals.css
frontend/src/types/: next-auth.d.ts  themes.ts
(+6 files in other folders)
